(library
 (name lexer)
 (modules lexer)
 (libraries sedlex tokens)
 (preprocess
  (pps sedlex.ppx)))

(library
 (name tokens)
 (modules tokens)
 (libraries sexplib)
 (preprocess
  (pps ppx_sexp_conv)))

(library
 (name syntax)
 (modules syntax)
 (libraries sexplib)
 (preprocess
  (pps ppx_sexp_conv)))
